fix overflow

--- a/gatsby/src/styles/index.module.css
+++ b/gatsby/src/styles/index.module.css
@@ -1,5 +1,6 @@
 .root {
   color: #dcded6;
+  overflow: hidden;
   background-color: #000;
   margin: 0;
   padding: 0;
